# atomic_hash

./: .gitignore  CMakeLists.txt  INSTALL  README.md  TODO  atomic_hash.c  atomic_hash.h  makefile  run  test.c
.github/workflows/: ubuntu.yml
hash_functions/: hash_city.c  hash_city.h  hash_mpq.h  hash_murmur3.h
include/: atomic_hash.h  atomic_hash_debug.h
queue/: atomic.h  lfq.c  lfq.d  lockfree.tar.bz2  makefile  test_queue  test_queue.c  test_queue.d
queue/lockfree/atomic-queue/: Makefile  lfq.h  test.c
queue/lockfree/shared-counter/: Makefile  aaf.c  aba-avoidance.c  aba.c  cas.c  dcas.c  locked.c  normal.c
src/: CMakeLists.txt  atomic_hash.c  atomic_hash.h  atomic_hash_debug.h  hash_city.c  makefile
src/backup_hash_functions/: hash_jenkins.c  hash_md5.h  hash_newhash.h
src/hash_functions/: hash_city.c  hash_city.h  hash_mpq.c  hash_mpq.h  hash_murmur3.c  hash_murmur3.h  hash_newhash.c  hash_newhash.h
src/hash_functions/attic/: hash_jenkins.c
src/hash_functions/unimplemented_functions/: hash_jenkins.c
test/: CMakeLists.txt  atomic_hash.h  makefile  mthread_test  mthread_test.c  mtrand.c  readme.MD  run
test/utils/: mtrand.c  mtrand.h
